avoid displaying too long branch names

--- a/server/sonar-web/src/main/js/app/components/nav/component/ComponentNav.css
+++ b/server/sonar-web/src/main/js/app/components/nav/component/ComponentNav.css
@@ -30,6 +30,7 @@
 
 .navbar-context-meta-branch-menu-item-name {
   flex: 1;
+  max-width: 300px;
 }
 
 .navbar-context-meta-branch-menu-item-actions {
